--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -3,4 +3,4 @@ project (main_app)
 set(CMAKE_CXX_STANDARD 11)
 
 add_executable(main main.c)
-target_link_libraries(main static_lib) # 静态链接static_lib
+target_link_libraries(main dynamic_lib) # 动态链接dynamic_lib
