pass variable to C code

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -3,4 +3,19 @@ project (main_app)
 set(CMAKE_CXX_STANDARD 11)
 
 add_executable(main main.c)
-target_link_libraries(main dynamic_lib) # 动态链接dynamic_lib
+
+# 通过target_compile_definitions传
+target_compile_definitions(main PRIVATE LOG_LEVEL=1) # 必须指定PRIVATE|PUBLIC|INTERFACE
+target_compile_definitions(main PRIVATE MARCO)
+
+# 通过add_definitions传
+# add_definitions("-DLOG_LEVEL=2")
+# add_definitions("-DMARCO")
+
+# 通过target_compile_definitions传并在构建编译系统时动态指定
+# set (log_level "0" CACHE STRING "log level")
+# target_compile_definitions(main PRIVATE LOG_LEVEL=${log_level}) # 必须指定PRIVATE|PUBLIC|INTERFACE
+
+# 通过add_definitions传并在构建编译系统时动态指定
+# set (log_level "0" CACHE STRING "log level")
+# add_definitions("-DLOG_LEVEL=${log_level}")
